Added logging and support for various migration types in MigrationRollbackGenerator
- Added support for the following migration types in MigrationRollbackGenerator:
  - CREATE TRIGGER / DROP TRIGGER
  - CREATE PROCEDURE / DROP PROCEDURE
  - CREATE VIEW / DROP VIEW
  - CREATE SEQUENCE / DROP SEQUENCE
  - CREATE SCHEMA / DROP SCHEMA
  - ALTER TABLE ADD CONSTRAINT / DROP CONSTRAINT
- Added logging to classes for improved diagnostics.